[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/heart_pixel.png" type="Texture" id=1]
[ext_resource path="res://interface/Gui.gd" type="Script" id=2]

[node name="Gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.68176
margin_right = 1.68176
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 150.0
margin_bottom = 53.0

[node name="Heart_1" type="TextureRect" parent="MarginContainer/NinePatchRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -22.0
margin_right = 45.0
margin_bottom = 22.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart_2" type="TextureRect" parent="MarginContainer/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -22.0
margin_right = 22.5
margin_bottom = 22.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart_3" type="TextureRect" parent="MarginContainer/NinePatchRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -22.0
margin_bottom = 22.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -65.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="MarginContainer2"]
margin_top = 20.0
margin_right = 230.0
margin_bottom = 34.0
text = "Early Beta 0.1"
align = 1
